<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UsuarioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp" />

        <!-- Título Cadastro -->
        <TextView
            android:id="@+id/label_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novo_usuario"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp" />

        <!-- Campos de entrada de dados -->
        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/nome_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextCpf"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/cpf_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/telefone_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/e_mail_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextEndereco"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/endereco_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:hint="@string/senha_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/editTextConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/Text_View"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:hint="@string/confirmar_senha_new"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />

        <!-- Botões -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cadastrar_user"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green_light"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/buttonCadastroVoltar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltar_para_inicio_user"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
