<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/pagina_incial_consultor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pagina_inicial"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <!-- Botão para abrir o PopupMenu -->
        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="Menu" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/label_carro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar_veiculo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/text_carro"
        style="@style/Text_View"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:hint="@string/cpf"
        android:textColorHint="@color/black"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner_status"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        style="@style/SpinnerGreyStyle"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="Buscar" />

</LinearLayout>
